[metadata]
name = bambuk
summary = OpenStack Neutron integration for hybrid cloud
description-file =
    README.rst
author = OpenStack
author-email = lionel.zerbib@huawei.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    bambuk

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    hyperswitch = bambuk.agent.hyperswitch.hyperswitch:main
    hyperswitch-cleanup = bambuk.agent.hyperswitch.cleanup.cleanup:main
    hyperswitch-rootwrap = oslo_rootwrap.cmd:main
    hyperswitch-rootwrap-daemon = oslo_rootwrap.cmd:daemon
neutron.ml2.mechanism_drivers =
    bambuk = bambuk.ml2.mech_driver:BambukMechanismDriver
neutronclient.extension =
    bambuk = bambuk.bambukclient.bambuk_client_ext._bambuk

[pbr]
warnerrors = true
